Bug 944420 - Create TextureHostOGL when Compositor is not present on gonk. r=nical, a=koi+