gfx/layers/composite/TextureHost.cpp
@@ -101,6 +101,13 @@ TextureHost::Create(uint64_t aID,
                                                  aDesc,
                                                  aDeallocator,
                                                  aFlags);
+#ifdef MOZ_WIDGET_GONK
+    case LAYERS_NONE:
+      // Power on video reqests to allocate TextureHost,
+      // when Compositor is still not present. This is a very hacky workaround.
+      // See Bug 944420.
+      return CreateTextureHostOGL(aID, aDesc, aDeallocator, aFlags);
+#endif
 #ifdef XP_WIN
     case LAYERS_D3D11:
     case LAYERS_D3D9:
